# happyranch

./: .gitignore  01-org-charter.md  02-system-prompts-managers.md  03-system-prompts-workers.md  04-escalation-rules.md  05-crewai-blueprint.md  05b-agent-runtime.md  05e-dashboard.md  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build-mac-app.yml  ci.yml  docs-manual-ci.yml  nightly-integration.yml
app/mac/: .gitignore  Package.swift  README.md
cli/: _shared.py  main.py  thread_forward.py
cli/client/: __init__.py  client.py
cli/commands/: __init__.py  agents.py  artifacts.py  assistant.py  dreams.py  executor_binaries.py  executors.py  jobs.py  kb.py  learning.py  pr_ci.py  runtime.py  schedules.py  skills.py  talk.py  tasks.py  threads.py  work_hours.py
deploy/remote-access/: .env.example  .gitignore  Caddyfile  RUNBOOK.md  docker-compose.yml
docs/: local-ci.md  thr061-redesign-scope.md
docs/adr/: 0001-per-provider-executor-throttle.md
docs/agent-guides/: agent-executors-and-permissions.md  features-and-invariants.md  orchestrator-contracts.md  project-layout.md  runtime-and-configuration.md  web-and-cli.md
docs/design-overhaul/: engineering_manager-2026-06-16-design-overhaul-build-breakdown.md  engineering_manager-2026-06-16-design-overhaul-gap-analysis-validated.md  product_lead-2026-06-16-design-overhaul-PRD-build-spec.md  product_lead-2026-06-16-design-overhaul-PRD-draft.md  product_lead-2026-06-16-design-overhaul-gap-analysis-draft.md  product_lead-2026-06-17-design-overhaul-PRD-final.md
docs/manual/: .gitignore  next.config.mjs  package-lock.json  package.json  theme.config.jsx
docs/product/: 2026-06-02-office-hours-product-wedge.md  PRD_CONVENTION.md
docs/setup/: feishu-notifications.md
org/: config.yaml
packaging/: build_daemon.sh  daemon.spec
protocol/: 00-completion-contract.md  01-org-charter.md  02-system-prompts-managers.md  03-system-prompts-workers.md  05-crewai-blueprint.md  05-runtime-blueprint.md  05-team-blueprint.md  05a-crews.md  05a-teams.md  05b-agent-runtime.md  05c-orchestrator.md  05d-feishu.md  05e-dashboard.md  06-knowledge-base.md
runtime/: config.py  models.py  runtime.py  system_assistant.py
runtime/daemon/: __init__.py  __main__.py  agent_config.py  app.py  assistant_pty.py  auth.py  dispatcher.py  dream_queue.py  dream_runner.py  dream_scheduler.py  feishu_listener.py  headless_assistant.py  jobs_runner.py  metrics.py  metrics_store.py  org_state.py  paths.py  pr_ci_adapters.py  pr_ci_merge.py  pr_ci_waiter.py  pty_exec_helper.py  queue.py  registration_token.py  runner.py  runtimes.py  (+11 more)
scripts/: build_web.sh  daemon.sh  local_ci.sh  migrate_opc_to_grassland.py  run_product_crew.py
src/: cli.py  config.py  models.py  runtime.py
tests/: conftest.py  test_agent_config.py  test_agent_def.py  test_agent_def_registry.py  test_artifact_store.py  test_asset_store.py  test_assistant_a_mode_routes.py  test_assistant_multi_conversation.py  test_assistant_multi_conversation_routes.py  test_assistant_pty.py  test_audit_logger.py  test_audit_logger_token_usage.py  test_capabilities.py  test_chain.py  test_cli.py  test_cli_artifacts.py  test_cli_assets.py  test_cli_assistant.py  test_cli_dreams.py  test_cli_executor_binaries.py  test_cli_executors.py  test_cli_jobs.py  test_cli_kb_stats.py  test_cli_learning.py  test_cli_scripts.py  test_cli_threads.py  test_cli_tokens.py  test_cli_web.py  test_config.py  test_context_builder.py  test_daemon_guard.py  test_database.py  test_database_dreams.py  test_database_schedules.py  test_database_scripts.py  test_database_work_hours.py  test_dream_store.py  test_examples_org_tree.py  test_executor.py  test_executor_binary_registry.py  (+86 more)
web/: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md  DESIGN_SYSTEM.md  UI_SPEC.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.setup.ts
(+1055 files in other folders)
