[project]
name = "opc-org"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.0",
    "httpx>=0.27",
]

[project.scripts]
opc = "src.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: end-to-end tests that spawn a real daemon",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
