[project]
name = "happyranch"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.0",
    "httpx>=0.27",
    "websockets>=12",
    "lark-oapi>=1.6,<2",
    "python-multipart>=0.0.29",
]

[project.scripts]
happyranch = "cli.main:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: end-to-end tests that spawn a real daemon",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runtime", "cli"]

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "runtime/system_knowledge/README.md"
"docs/agent-guides/project-layout.md" = "runtime/system_knowledge/docs/agent-guides/project-layout.md"
"docs/agent-guides/runtime-and-configuration.md" = "runtime/system_knowledge/docs/agent-guides/runtime-and-configuration.md"
"docs/agent-guides/agent-executors-and-permissions.md" = "runtime/system_knowledge/docs/agent-guides/agent-executors-and-permissions.md"
"docs/agent-guides/orchestrator-contracts.md" = "runtime/system_knowledge/docs/agent-guides/orchestrator-contracts.md"
"docs/agent-guides/web-and-cli.md" = "runtime/system_knowledge/docs/agent-guides/web-and-cli.md"
"docs/agent-guides/features-and-invariants.md" = "runtime/system_knowledge/docs/agent-guides/features-and-invariants.md"
"protocol/00-completion-contract.md" = "runtime/system_knowledge/protocol/00-completion-contract.md"
"protocol/05-runtime-blueprint.md" = "runtime/system_knowledge/protocol/05-runtime-blueprint.md"
"protocol/05b-agent-runtime.md" = "runtime/system_knowledge/protocol/05b-agent-runtime.md"
"protocol/05c-orchestrator.md" = "runtime/system_knowledge/protocol/05c-orchestrator.md"
"protocol/06-knowledge-base.md" = "runtime/system_knowledge/protocol/06-knowledge-base.md"
"protocol/skills/talk/SKILL.md" = "runtime/system_knowledge/protocol/skills/talk/SKILL.md"
"protocol/skills/jobs/SKILL.md" = "runtime/system_knowledge/protocol/skills/jobs/SKILL.md"
"skills/happyranch/SKILL.md" = "runtime/system_knowledge/skills/happyranch/SKILL.md"
